Crash While Scrubbing Viewport render of fire sim #73626

Closed
opened 2020-02-06 03:43:42 +01:00 by Aaron Carlisle · 10 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.83 (sub 2), branch: master (modified), commit date: 2020-02-05 17:42, hash: 00a0f06241
Worked: (optional)

Short description of error
While scrubbing the timeline while cycles viewport rendering of a fire sim blender crashes

It appears intermittent but is repeatable, my guess is some thread conflict or race condition

Exact steps for others to reproduce the error

  • Quick Smoke --> Shange type to fire
  • Set cache type to final
  • bake all
  • Set render to cycles
  • viewport Render
  • scrub timeline
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.83 (sub 2), branch: master (modified), commit date: 2020-02-05 17:42, hash: `00a0f06241` Worked: (optional) **Short description of error** While scrubbing the timeline while cycles viewport rendering of a fire sim blender crashes It appears intermittent but is repeatable, my guess is some thread conflict or race condition **Exact steps for others to reproduce the error** - Quick Smoke --> Shange type to fire - Set cache type to final - bake all - Set render to cycles - viewport Render - scrub timeline
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

#74329 was marked as duplicate of this issue

#74329 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I confirm the crash with the CPU.
With GPU it doesn't seem to crash.

Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13559 Core Profile Context 26.20.12028.2

I confirm the crash with the CPU. With GPU it doesn't seem to crash. **Operating system:** Windows-10-10.0.18941 64 Bits **Graphics card:** Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13559 Core Profile Context 26.20.12028.2

Added subscribers: @dabuxian, @brecht, @ankitm

Added subscribers: @dabuxian, @brecht, @ankitm
Member

The crash doesn't happen when there's no material assigned or it's anything other than principled volume.

  • It won't crash if you play the animation for even 1 or 2 seconds, before scrubbing.
> The crash doesn't happen when there's no material assigned or it's anything other than principled volume. - It won't crash if you *play* the animation for even 1 or 2 seconds, before scrubbing.

This issue was referenced by blender/cycles@753b522f77

This issue was referenced by blender/cycles@753b522f77a02967faf9fbe0689c14145875b52e

This issue was referenced by e6d0a438ab

This issue was referenced by e6d0a438ab951f188f4fc7e2678a0f867b9b350f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-03-11 20:49:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73626
No description provided.