Fix T73626: crash scrubbing timeline with Cycles viewport and smoke/fire